--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -3,16 +3,17 @@ on:
   schedule:
     - cron: "30 20 * * *"
 
+permissions:
+  issues: write
+  pull-requests: write
+
 jobs:
   stale:
-    name: 🔒 Close Stale Issues and PRs
+    name: 🔒 Close Stale Items
     runs-on: ubuntu-latest
     timeout-minutes: 4
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-      - name: Close Stale Issues and PRs
+      - name: 🔒 Close Stale Issues and PRs
         uses: actions/stale@v10.1.0
         with:
           days-before-stale: 60
