--- a/.github/workflows/config/pr-labels.yaml
+++ b/.github/workflows/config/pr-labels.yaml
@@ -1,7 +1,7 @@
 feature: ["feature/*", "feat/*"]
 tests: ["test/*", "tests/*"]
 bug: ["fix/*", "bug/*"]
-dependencies: ["chore/*", "deps/*"]
+dependencies: ["chore/*", "chore!/*", "deps/*"]
 ci/cd: ["ci/*", "build/*"]
 documentation: ["docs/*", "doc/*", "style/*"]
 refactor: refactor/*
